--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
 body{
 	margin: 0;
-    background-image: SRC="assets\images\IndexBackground.svg";
+    background-image: SRC="assets\\images\\IndexBackground.svg";
 }
