--- a/index.css
+++ b/index.css
@@ -1,5 +1,74 @@
 @charset "utf-8";
+:root {
+	--height: 94.3%;
+	--width: 95.4%;
+}
 body{
 	margin: 0;
-    background-image: SRC="assets\\images\\IndexBackground.svg";
+	overflow: hidden;
+}
+
+.MAIN{
+	width: 100vw;
+	height: 100vh;	
+	/* min-width: 500px;
+	min-height: 500px; */
+	/* background-color: #001220; */
+	/* background-image: url(assets/images/IndexBackground.svg); */
+	/* background-repeat: no-repeat;  */
+	/* background-size: cover; */
+}
+
+.TEXT{
+	position: absolute;
+
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	background-color: rgba(255, 0, 0, 30%);
+	color: white;
+	text-decoration: none;
+	text-align: center;
+	font-size: 40px;
+}
+line-1{
+	position: relative;
+	top: 50%;  
+	width: 24em;
+	margin: 0 auto;
+	border-right: 2px solid rgba(255,255,255,.75);
+	font-size: 180%;
+	text-align: center;
+	white-space: nowrap;
+	overflow: hidden;
+	transform: translateY(-50%);    
+}
+
+
+.line-1{
+    position: relative;
+    top: 90%;  
+    width: 24em;
+    margin: 0 auto;
+    border-right: 2px solid rgba(255,255,255,.75);
+    font-size: 180%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    /* transform: translateY(-20%/);     */
+}
+
+/* Animation */
+.line-1{
+	animation: typewriter 4s steps(44) 1s 1 normal both,
+			blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+	from{width: 0;}
+	to{width: 24em;}
+}
+@keyframes blinkTextCursor{
+	from{border-right-color: rgba(255,255,255,.75);}
+	to{border-right-color: transparent;}
 }
