--- a/index.css
+++ b/index.css
@@ -19,15 +19,15 @@ body{
 .TEXT{
 	position: absolute;
 
-	top: 50%;
-	left: 50%;
+	top: 50vh;
+	left: 50vw;
 	transform: translate(-50%, -50%);
 
 	/* background-color: rgba(255, 0, 0, 30%);  Background color for debugging*/
 	color: var(--textColor);
 	text-decoration: none;
 	text-align: center;
-	font-size: 70px;
+	font-size: clamp(1rem, -0.875rem + 8.333333vw, 4rem);
 	font-weight: bold;
 }
 
@@ -35,14 +35,14 @@ body{
     width: 24em;
 	margin: 0 auto; 
     position: relative;
-    top: 90%;  
+    top: 90vh;  
     transform: translateY(-50%);
     
     border-right: 2px solid rgba(22, 56, 90,.75);
     white-space: nowrap;
     overflow: hidden;
 	
-    font-size: 130%;
+    font-size: clamp(1rem, -0.875rem + 7.333333vw, 1.3rem);;
     text-align: center;
 	color: var(--textColor);
 }
