--- a/index.css
+++ b/index.css
@@ -17,32 +17,32 @@ body{
 }
 
 .TEXT{
-	position: absolute;
+	position: absolute;	
 
-	top: 50vh;
-	left: 50vw;
+	top: 50%;
+	left: 50%;
 	transform: translate(-50%, -50%);
 
 	/* background-color: rgba(255, 0, 0, 30%);  Background color for debugging*/
 	color: var(--textColor);
 	text-decoration: none;
 	text-align: center;
-	font-size: clamp(1rem, -0.875rem + 8.333333vw, 4rem);
+	font-size: clamp(1.5rem, -0.875rem + 8.333333vw, 4rem);
 	font-weight: bold;
 }
 
 .MagicText{
-    width: 24em;
+    width: 70%;
 	margin: 0 auto; 
     position: relative;
-    top: 90vh;  
+    top: 90%;  
     transform: translateY(-50%);
     
     border-right: 2px solid rgba(22, 56, 90,.75);
     white-space: nowrap;
     overflow: hidden;
 	
-    font-size: clamp(1rem, -0.875rem + 7.333333vw, 1.3rem);;
+    font-size: clamp(0.6rem, -0.875rem + 8.333333vw, 1.3rem);;
     text-align: center;
 	color: var(--textColor);
 }
